--- a/Loeng 3/Kolmas uudis.html
+++ b/Loeng 3/Kolmas uudis.html
@@ -19,7 +19,7 @@
    <div>Jüri Saar</div>
    <div>20.09.2022</div>
    </div><br>
-   <img src="Finnair.jpg" alt="Finnair" width="300px"><br>
+   <img src="Finnair.jpg" alt="Finnair" style="width: 500px;height:250px;"><br>
         <h3>Soome lennufirma Finnair lõpetab Tartust lendamise, esialgse teate kohaselt talvehooajaks. Kuivõrd kindlust lendude taastamise asjus pole,
         plaanib linnavalitsus kuulutada riigihanke, et üldhuviteenusena leida Riia, Helsingi või Stockholmi lennuliini teenindaja.</h3>
     	<div><p>Tartu lennujaama esindaja Roman Kulikov ütles, et praeguse teadmise põhjal on viimane lend oktoobri viimasel reedel, kas ja millal lennud taastatakse, ei ole teada.
