--- a/Loeng02/index.html
+++ b/Loeng02/index.html
@@ -7,10 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
+    <h1>Uudised</h1>
+    <p><a href="Vorm.html">Loo Konto</a> </p>
 <body>
     
 </body>
-
-
-</html>
