--- a/Loeng02/Vorm.html
+++ b/Loeng02/Vorm.html
@@ -33,7 +33,7 @@
     <label for="psw-repeat"><b>Salasõna teist korda</b></label>
     <input type="password" placeholder="Salasõna teist korda" name="psw-repeat" id="psw-repeat" required><br>
     
-    <input type="checkbox" name="checkbox" required id="checkbox">
+    <input type="checkbox" name="checkbox" id="checkbox" required>
   <label for="checkbox"> Olen nõus enda infot saatma</label><br>
     
     <input type="submit" value="Submit">
