--- a/Loeng04/index.html
+++ b/Loeng04/index.html
@@ -22,12 +22,19 @@
 <a href="teenused.html">Teenused</a>
 <a href="kontakt.html">Kontakt</a>
     </nav>
-    <main>
-    <h2>Tere tulemast</h2>
-    <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis voluptas vitae maiores minima quas? In eveniet maiores consequatur repudiandae, quo accusantium! Nisi quidem quasi fuga veniam fugiat iusto, provident minima!
-    </p>
-    <img src="Dog2.png" alt="Dog2">
+    <main> 
+    <div class="sisu">  
+        <div class="tutvustus">
+            <h2>Tere tulemast</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Facilis voluptas vitae maiores minima quas? In eveniet maiores consequatur repudiandae, quo accusantium! Nisi quidem quasi fuga veniam fugiat iusto, provident minima!
+            </p>
+            <img src="Dog2.png" alt="Dog2" width="300px">
+        </div>
+        <div class="reklaam">
+            <div><p>Telli koerte värvimisraamat juba täna ning saad esimeselt tellimuselt allahindluse -20%!</p></div>
+            <img src="Dog3.jpg" alt="Dog3" width="200px">
+        </div>
+    </div>
     </main>
     <Footer>
         <p><ul style="list-style-type:none;">
@@ -37,10 +44,13 @@
             <li>+372 5111 111</li>
         </ul></p>
         <nav>
-            <a href="index.html">Pealeht</a>
-            <a href="teenused.html">Teenused</a>
-            <a href="kontakt.html">Kontakt</a>
-            </nav> 
+        <div class="button1">
+            <a href="index.html">Pealeht</a></div>
+        <div class="button2">
+            <a href="teenused.html">Teenused</a></div>
+        <div class="button3">
+            <a href="kontakt.html">Kontakt</a></div>
+        </nav> 
     </Footer>
     </main>
 
