--- a/Loeng04/teenused.html
+++ b/Loeng04/teenused.html
@@ -22,14 +22,22 @@
 <a href="teenused.html">Teenused</a>
 <a href="kontakt.html">Kontakt</a>
 </nav>
-<main>
-    <h2>Meie teenused</h2>
-    <p><ul>
-        <li>Värvimisleht 1€ tk</li><br>
-        <li>Värviraamat 10€ tk</li><br>
-        <li>Personaalne värvimisleht sinu koerast 5€ tk</li>
-      </ul>  
-    </p>
+    <main> 
+        <div class="sisu2">  
+            <div class="teenused">
+                <h2>Meie teenused</h2>
+                <p><ul>
+                    <li>Värvimisleht 1€ tk</li><br>
+                    <li>Värviraamat 10€ tk</li><br>
+                    <li>Personaalne värvimisleht sinu koerast 5€ tk</li>
+                  </ul>  
+                </p>
+            </div>
+            <div class="reklaam">
+                <div><p>Telli koerte värvimisraamat juba täna ning saad esimeselt tellimuselt allahindluse -20%!</p></div>
+                <img src="Dog3.jpg" alt="Dog3" width="200px">
+            </div>
+        </div>
     </main>
     <Footer>
        <p><ul style="list-style-type:none;">
