--- a/Loeng04/kontakt.html
+++ b/Loeng04/kontakt.html
@@ -23,17 +23,24 @@
 <a href="kontakt.html">Kontakt</a>
 </nav>
 <main>
-    <h2>Võta meiega ühendust</h2>
-    <p>Vastame sinu kirjale kolme tööpäeva jooksul</p>
-    <form action>   
-        <label for="name"><b>Nimi</b></label><br>
-        <input type="text" placeholder="Nimi" name="name" id="name" required><br><br>
-        <label for="email"><b>E-mail</b></label><br>
-        <input type="text" placeholder="E-mail" name="email" id="email" required><br><br>
-        <textarea name="message" rows="15" cols="50" placeholder="Sisesta oma sõnum."></textarea><br>
-        <input type="submit" value="Saada">
-    </form>
-
+        <div class="sisu3">  
+            <div class="vorm">
+                <h2>Võta meiega ühendust</h2>
+                <p>Vastame sinu kirjale kolme tööpäeva jooksul</p>
+                <form action>   
+                    <label for="name"><b>Nimi</b></label><br>
+                    <input type="text" placeholder="Nimi" name="name" id="name" required><br><br>
+                    <label for="email"><b>E-mail</b></label><br>
+                    <input type="text" placeholder="E-mail" name="email" id="email" required><br><br>
+                    <textarea name="message" rows="15" cols="50" placeholder="Sisesta oma sõnum."></textarea><br>
+                    <input type="submit" value="Saada">
+                </form>
+            </div>
+            <div class="reklaam">
+                <div><p>Telli koerte värvimisraamat juba täna ning saad esimeselt tellimuselt allahindluse -20%!</p></div>
+                <img src="Dog3.jpg" alt="Dog3" width="200px">
+            </div>
+        </div>
     </main>
     <Footer>
         <p><ul style="list-style-type:none;">
