--- a/Loeng04/kontakt.html
+++ b/Loeng04/kontakt.html
@@ -23,7 +23,7 @@
 <a href="kontakt.html">Kontakt</a>
 </nav>
 <main>
-        <div class="sisu3">  
+        <div class="sisu">  
             <div class="vorm">
                 <h2>Võta meiega ühendust</h2>
                 <p>Vastame sinu kirjale kolme tööpäeva jooksul</p>
@@ -50,9 +50,12 @@
             <li>+372 5111 111</li>
         </ul></p>
         <nav>
-            <a href="index.html">Pealeht</a>
-            <a href="teenused.html">Teenused</a>
-            <a href="kontakt.html">Kontakt</a>
+            <div class="button1">
+                <a href="index.html">Pealeht</a></div>
+            <div class="button2">
+                <a href="teenused.html">Teenused</a></div>
+            <div class="button3">
+                <a href="kontakt.html">Kontakt</a></div>
             </nav> 
     </Footer>
     </main>
