--- a/Loeng04/teenused.html
+++ b/Loeng04/teenused.html
@@ -23,7 +23,7 @@
 <a href="kontakt.html">Kontakt</a>
 </nav>
     <main> 
-        <div class="sisu2">  
+        <div class="sisu">  
             <div class="teenused">
                 <h2>Meie teenused</h2>
                 <p><ul>
@@ -47,9 +47,12 @@
             <li>+372 5111 111</li>
         </ul></p>
         <nav>
-            <a href="index.html">Pealeht</a>
-            <a href="teenused.html">Teenused</a>
-            <a href="kontakt.html">Kontakt</a>
+            <div class="button1">
+                <a href="index.html">Pealeht</a></div>
+            <div class="button2">
+                <a href="teenused.html">Teenused</a></div>
+            <div class="button3">
+                <a href="kontakt.html">Kontakt</a></div>
             </nav> 
     </Footer>
     </main>
