--- a/Loeng08/index.html
+++ b/Loeng08/index.html
@@ -12,7 +12,7 @@
     <input type="text" placeholder="Nimi" id="nimi" /><br>
     <span id="hinnang"></span><br>
     <button id="nupp">Hinda minu nime</button>
-    <script>src="script.js"</script>
+    <script src="script.js"></script>
     
 </body>
 </html>
