--- a/Loeng09/Esimene uudis.html
+++ b/Loeng09/Esimene uudis.html
@@ -20,7 +20,8 @@
    <div>20.09.2022</div>
    </div><br>
    <img src="Enefit.jpg" alt="Enefit" style="width: 300px;height:300px;"><br>
-        <h3>Viru Maakohus võttis 20. septembril 2022 menetlusse Eesti Ühistuenergia OÜ hagi Enefit Green ASi tütarettevõtja Enefit Wind Purtse AS vastu. Hageja taotleb, et Purtse tuuleparki ei püstitataks võimsamaid kui 3 MW tuulikuid.</h3>
+        <h3>Soome lennufirma Finnair lõpetab Tartust lendamise, esialgse teate kohaselt talvehooajaks. Kuivõrd kindlust lendude taastamise asjus pole,
+        plaanib linnavalitsus kuulutada riigihanke, et üldhuviteenusena leida Riia, Helsingi või Stockholmi lennuliini teenindaja.</h3>
     	<div><p>Viru Maakohus rahuldas kohtumäärusega hageja esialgse õiguskaitse avalduse ja keelas kohtumenetluse ajal võimsamate kui 3 MW tuulikute püstitamise.
             Enefit Greeni juhatus on seisukohal, et on Purtse tuulepargi rajamisel käitunud õiguspäraselt ning kavatseb hagiavaldusele vastu vaielda ja esialgse õiguskaitse määruse vaidlustada.
             Enefit Green on varasemalt teatanud kavatsusest ehitada Purtse tuuleparki viis 4,2 MW võimsusega tuulikut.
